@@ -1,7 +1,8 @@
 ----------------------------------
-[2010-02-08 Ver 0.51 -> 0.52]
+[2010-03-02 Ver 0.51 -> 0.52]
 - modified sublik logic
 - Fixed bug about RewriteRule in .htaccess for pico.(thx takahasi)
+- Fixed bug about default display block is not displayed
 - 'Wizin' updated from '0.61' to '0.65'
 ----------------------------------
 [2009-12-01 Ver 0.50 -> 0.51]
